force-app/main/default/objects/Integration_Settings__c/Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description></description>
    <label>Integration Settings</label>
</CustomObject>