force-app/main/default/objects/Integration_Settings__c/fields/Enable_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Enrichment__c</fullName>
    <label>Enable Enrichment</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Enable Enrichment</description>
</CustomField>