force-app/main/default/objects/Integration_Settings__c/fields/Marketing_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Endpoint__c</fullName>
    <label>Marketing Endpoint</label>
    <type>Url</type>
    <description>Marketing Endpoint</description>
</CustomField>