force-app/main/default/objects/Integration_Settings__c/fields/Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Ms__c</fullName>
    <label>Timeout Ms</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>5000</defaultValue>
    <description>Timeout Ms</description>
</CustomField>